push popin-correction z-index to pass over header

--- a/packages/@coorpacademy-components/src/template/app-player/popin-correction/style.css
+++ b/packages/@coorpacademy-components/src/template/app-player/popin-correction/style.css
@@ -24,11 +24,14 @@
 
 .overlay {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: #404040;
   margin: 0;
   padding: 0;
+  z-index: 100;
 }
 
 .openingOverlay {
